--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
     <div id="titleOverlay">VOLUMETRIK-01</div>
 
     <div id="topLeftLinks">
+      <a href="#" id="resetLink">Reset</a>
       <a href="#" id="openLink">Open</a>
-      <a href="#" id="downloadLink">Save</a>
+      <a href="#" id="downloadLink">Download</a>
     </div>
 
     <div id="colorPalettePanel">
