feat: undo/redo from the menubar

--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
           <a href="#" class="dropdown-item" id="saveFile">Save</a>
         </div>
       </div>
+
+      <div class="menu-item">
+        <a href="#" class="menu-label" id="editMenu">Edit</a>
+        <div class="dropdown">
+          <a href="#" class="dropdown-item" id="undoAction">Undo</a>
+          <a href="#" class="dropdown-item" id="redoAction">Redo</a>
+        </div>
+      </div>
     </div>
 
     <div id="colorPalettePanel">
