feat: add View menu and wire up actions

--- a/index.html
+++ b/index.html
@@ -34,7 +34,21 @@
           <a href="#" class="dropdown-item" id="redoAction">Redo</a>
         </div>
       </div>
+
+      <div class="menu-item">
+        <a href="#" class="menu-label" id="viewMenu">View</a>
+        <div class="dropdown">
+          <a href="#" class="dropdown-item" id="upOneLayer">Up One Layer</a>
+          <a href="#" class="dropdown-item" id="downOneLayer">Down One Layer</a>
+          <a href="#" class="dropdown-item" id="jumpToTop">Jump to Top</a>
+          <a href="#" class="dropdown-item" id="jumpToBottom">Jump to Bottom</a>
+          <a href="#" class="dropdown-item" id="toggleXray">Toggle X-Ray</a>
+          <a href="#" class="dropdown-item" id="toggleGrid">Toggle Voxel Grid</a>
+        </div>
+      </div>
     </div>
+
+  </div>
 
     <div id="colorPalettePanel">
       <div class="colorSwatch" id="color-1"></div>
