feat: add tool menu

--- a/index.html
+++ b/index.html
@@ -46,6 +46,14 @@
           <a href="#" class="dropdown-item" id="toggleGrid">Toggle Voxel Grid</a>
         </div>
       </div>
+
+      <div class="menu-item">
+        <a href="#" class="menu-label" id="toolsMenu">Tools</a>
+        <div class="dropdown">
+          <a href="#" class="dropdown-item" id="toggleOverpaint">Overpaint</a>
+          <a href="#" class="dropdown-item" id="toggleFill">Fill</a>
+        </div>
+      </div>
     </div>
 
   </div>
