refactor: move keyboard controls into keyboard.mjs

--- a/index.html
+++ b/index.html
@@ -95,5 +95,6 @@
 
     <script type="module" src="./assets/js/script.mjs"></script>
     <script type="module" src="./assets/js/menubar.mjs"></script>
+    <script type="module" src="./assets/js/keyboard.mjs"></script>
   </body>
 </html>
