feat: rebrand into VoxPaint

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>VOLUMETRIK-01</title>
+    <title>VoxPaint</title>
     <link rel="icon" href="data:," />
     <link
       href="https://fonts.googleapis.com/css2?family=VT323&display=swap"
@@ -14,7 +14,7 @@
   <body>
     <canvas id="viewportCanvas"></canvas>
 
-    <div id="titleOverlay">VOLUMETRIK-01</div>
+    <div id="titleOverlay">VoxPaint</div>
 
     <!-- Menubar (always at the top) -->
     <div id="menuBar">
