feat: update voxel grid toggle name in menubar

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
           <a href="#" class="dropdown-item" id="downOneLayer">Down One Layer</a>
           <a href="#" class="dropdown-item" id="jumpToBottom">Jump to Bottom</a>
           <a href="#" class="dropdown-item" id="toggleXray">Toggle X-Ray</a>
-          <a href="#" class="dropdown-item" id="toggleGrid">Toggle Voxel Grid</a>
+          <a href="#" class="dropdown-item" id="toggleGrid">Show Voxel Grid</a>
         </div>
       </div>
 
