feat: reorder View menu for clarity

--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
       <div class="menu-item">
         <a href="#" class="menu-label" id="viewMenu">View</a>
         <div class="dropdown">
+          <a href="#" class="dropdown-item" id="toggleGrid">Show Voxel Grid</a>
           <a href="#" class="dropdown-item" id="jumpToTop">Jump to Top</a>
           <a href="#" class="dropdown-item" id="upOneLayer">Up One Layer</a>
           <a href="#" class="dropdown-item" id="downOneLayer">Down One Layer</a>
           <a href="#" class="dropdown-item" id="jumpToBottom">Jump to Bottom</a>
-          <a href="#" class="dropdown-item" id="toggleXray">Toggle X-Ray</a>
-          <a href="#" class="dropdown-item" id="toggleGrid">Show Voxel Grid</a>
+          <a href="#" class="dropdown-item" id="toggleXray">X-Ray Mode</a>
         </div>
       </div>
 
