feat: explicit pen tool and tool switching

--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
       <div class="menu-item">
         <a href="#" class="menu-label" id="toolsMenu">Tools</a>
         <div class="dropdown">
+          <a href="#" class="dropdown-item" id="togglePaint">Paint</a>
           <a href="#" class="dropdown-item" id="toggleOverpaint">Overpaint</a>
           <a href="#" class="dropdown-item" id="toggleFill">Fill</a>
         </div>
