refactor: use pal files directly instead of json

--- a/index.html
+++ b/index.html
@@ -59,40 +59,7 @@
 
   </div>
 
-    <div id="colorPalettePanel">
-      <div class="colorSwatch" id="color-1"></div>
-      <div class="colorSwatch" id="color-2"></div>
-      <div class="colorSwatch" id="color-3"></div>
-      <div class="colorSwatch" id="color-4"></div>
-      <div class="colorSwatch" id="color-5"></div>
-      <div class="colorSwatch" id="color-6"></div>
-      <div class="colorSwatch" id="color-7"></div>
-      <div class="colorSwatch" id="color-8"></div>
-      <div class="colorSwatch" id="color-9"></div>
-      <div class="colorSwatch" id="color-10"></div>
-      <div class="colorSwatch" id="color-11"></div>
-      <div class="colorSwatch" id="color-12"></div>
-      <div class="colorSwatch" id="color-13"></div>
-      <div class="colorSwatch" id="color-14"></div>
-      <div class="colorSwatch" id="color-15"></div>
-      <div class="colorSwatch" id="color-16"></div>
-      <div class="colorSwatch" id="color-17"></div>
-      <div class="colorSwatch" id="color-18"></div>
-      <div class="colorSwatch" id="color-19"></div>
-      <div class="colorSwatch" id="color-20"></div>
-      <div class="colorSwatch" id="color-21"></div>
-      <div class="colorSwatch" id="color-22"></div>
-      <div class="colorSwatch" id="color-23"></div>
-      <div class="colorSwatch" id="color-24"></div>
-      <div class="colorSwatch" id="color-25"></div>
-      <div class="colorSwatch" id="color-26"></div>
-      <div class="colorSwatch" id="color-27"></div>
-      <div class="colorSwatch" id="color-28"></div>
-      <div class="colorSwatch" id="color-29"></div>
-      <div class="colorSwatch" id="color-30"></div>
-      <div class="colorSwatch" id="color-31"></div>
-      <div class="colorSwatch" id="color-32"></div>
-    </div>
+    <div id="colorPalettePanel"></div>
 
     <script type="module" src="./assets/js/script.mjs"></script>
     <script type="module" src="./assets/js/menubar.mjs"></script>
