refactor: split out palette rendering from loadDefaultPalette

--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
       </div>
 
       <div class="menu-item">
+        <a href="#" class="menu-label" id="paletteMenu">Palette</a>
+        <div class="dropdown">
+          <a href="#" class="dropdown-item" id="loadDefault32">Default (DB32)</a>
+        </div>
+      </div>
+
+      <div class="menu-item">
         <a href="#" class="menu-label" id="toolsMenu">Tools</a>
         <div class="dropdown">
           <a href="#" class="dropdown-item" id="togglePaint">Paint</a>
