feat: add one more built-in pallete

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
       <div class="menu-item">
         <a href="#" class="menu-label" id="paletteMenu">Palette</a>
         <div class="dropdown">
-          <a href="#" class="dropdown-item" id="loadDefault32">Default (DB32)</a>
+          <a href="#" class="dropdown-item" id="loadDefault16">DawnBringer-16</a>
+          <a href="#" class="dropdown-item" id="loadDefault32">DawnBringer-32</a>
         </div>
       </div>
 
