feat: add link to lospec for more palettes

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
           <a href="#" class="dropdown-item" id="loadDefault16">DawnBringer 16</a>
           <a href="#" class="dropdown-item" id="loadDefault32">DawnBringer 32</a>
           <a href="#" class="dropdown-item" id="importPalette">Load From File...</a>
+          <a href="https://lospec.com/palette-list" target="_blank" rel="noopener noreferrer" class="dropdown-item" id="getMorePalettes">Get More...</a>
         </div>
       </div>
 
