--- a/index.html
+++ b/index.html
@@ -50,8 +50,7 @@
       <div class="menu-item">
         <a href="#" class="menu-label" id="paletteMenu">Palette</a>
         <div class="dropdown">
-          <a href="#" class="dropdown-item" id="loadDefault16">DawnBringer 16</a>
-          <a href="#" class="dropdown-item" id="loadDefault32">DawnBringer 32</a>
+          <!-- Built-in palettes get populated dynamically here from menubar.mjs -->
           <a href="#" class="dropdown-item" id="importPalette">Load From File...</a>
           <a href="https://lospec.com/palette-list" target="_blank" rel="noopener noreferrer" class="dropdown-item" id="getMorePalettes">Get More...</a>
         </div>
