feat: add support for Gimp GPL format palettes

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
   </div>
 
     <div id="colorPalettePanel"></div>
-    <input type="file" id="paletteFileInput" accept=".pal,.txt" style="display: none;" />
+    <input type="file" id="paletteFileInput" accept=".pal,.txt,.gpl" style="display: none;" />
 
     <script type="module" src="./assets/js/script.mjs"></script>
     <script type="module" src="./assets/js/menubar.mjs"></script>
